--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "twig/twig": "1.*"
-    }
+		"php": ">=5.4.0",
+        "twig/twig": "1.*",
+		"filp/whoops": "1.*"
+  }	
 }
